<resources>
    <string name="app_name">Homework9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--    Create Activity -->
    <string name="save_draft">Save Draft</string>
    <string name="title">Title</string>
    <string name="write_your_title_here">write your title here~</string>
    <string name="description_title">Description</string>
    <string name="description_hint">write your description here~</string>
    <string name="publish">Publish</string>
</resources>