<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/title"
            />

        <EditText
            android:id="@+id/title_edittext"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/write_your_title_here"
            android:inputType="text"
            android:autofillHints=" "
            />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/description_title"/>

        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:hint="@string/description_hint"
            android:autofillHints=" "
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_upload_image"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/teal_700"
        android:text="Upload Image"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/btn_publish"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/save_draft"
        android:textColor="@color/black"
        />


    <Button
        android:id="@+id/btn_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/black"
        />
</androidx.constraintlayout.widget.ConstraintLayout>